--- a/signal.css
+++ b/signal.css
@@ -143,6 +143,48 @@
     font-size: 1.1rem;
     color: #4a4a4a;
 }
+.prefootone{
+    box-sizing: border-box;
+    padding-top: 3rem;
+}
+.noadimg{
+    width: 42rem;
+    border-radius: 16px;
+}
+.prefoottwo{
+    box-sizing: border-box;
+    padding-top: 6.5rem;
+    padding-bottom: 3rem;
+}
+.nonproimg{
+    width: 42rem;
+    border-radius: 16px;
+    margin-left: 11rem;
+}
+.footer{
+    background-color: #1b1b1b;
+    color: white;
+    box-sizing: border-box;
+    padding-top: 3rem;
+    padding-bottom: 6rem;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1rem;
+}
+.taghd{
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+    line-height: 1rem;
+    font-weight: bold;
+}
+.tags{
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1rem;
+    color: white;
+    text-decoration: none;
+    line-height: .5rem;
+}
 @media screen and (max-width: 1463) {
     .videodivback{
         background-color: #A5CAD5;
@@ -273,6 +315,15 @@
     }
     .innerimages{
         width: 18rem;
+    }
+    .noadimg{
+        width: 24rem;
+        border-radius: 16px;
+    }
+    .nonproimg{
+        width: 24rem;
+        border-radius: 16px;
+        margin-left: 0rem;
     }
 }
 @media screen and (max-width: 430px) {
